fixed logo stretch

--- a/css/site.css
+++ b/css/site.css
@@ -861,8 +861,6 @@ margin-top: -80px;
 .supported-hardware img {
   max-height: 50px;
   max-width: 150px;
-  height: auto;
-  width: 100%;
 }
 
 
